kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers-backend-ms
  namespace: customers-dev
  labels:
    app: customers-backend-ms
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customers-backend-ms
      version: v1
  template:
    metadata:
      labels:
        app: customers-backend-ms
        version: v1
    spec:
      containers:
        - name: customers-backend-ms
          image: ms.io:5000/customers/backend:1.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 80
