kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: customers-backend-ms
    version: v1
  name: customers-backend-ms
  namespace: customers-dev
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: customers-backend-ms
    version: v1
  type: ClusterIP
