kubernetes/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: customers-backend-ms
  namespace: customers-dev
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - api.ac.io
    port:
      name: http
      number: 80
      protocol: HTTP
